# swotbot

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: SWOTbot_analysis.md
src/: main.py
src/swotbot/: agents.py  main.py  models.py  team.py
